--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' https://maps.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https://maps.googleapis.com https://maps.gstatic.com; frame-src https://www.google.com"
+      content="
+        default-src 'self';
+        script-src 'self' 'unsafe-inline' https://maps.googleapis.com;
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        img-src 'self' data: https://maps.googleapis.com https://maps.gstatic.com;
+        font-src 'self' https://fonts.gstatic.com;
+        frame-src https://www.google.com;
+        connect-src 'self' https://maps.googleapis.com;
+      "
     />
     <title>PrimeKey</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
